--- a/getting-started/setup-basics/prerequisites-requirements.mdx
+++ b/getting-started/setup-basics/prerequisites-requirements.mdx
@@ -1,88 +1,183 @@
 ---
 title: "Prerequisites & System Requirements"
-description: "Outlines the hardware, operating systems, and compiler versions required to use GoogleTest and GoogleMock. Emphasizes the need for C++17 or higher and highlights supported platforms, referencing official compatibility matrices and foundational support policies."
+description: "Outlines the minimum C++ standards, required build tools, and supported platforms for GoogleTest and GoogleMock. Clarifies dependencies and environment setup, helping users verify their system compatibility before proceeding."
 ---
 
 # Prerequisites & System Requirements
 
-Before using GoogleTest and GoogleMock, ensure your environment meets the following hardware, software, and platform requirements. Adhering to these prerequisites guarantees a smooth installation, configuration, and execution of your tests with full compatibility.
+This page details the essential prerequisites and system requirements you need to meet before building and running GoogleTest and GoogleMock. Understanding these requirements upfront ensures a smooth setup process and avoids common build and compatibility issues.
 
 ---
 
-## 1. Hardware Requirements
+## 1. Supported C++ Standards
 
-- **Processor:** Any processor supporting your chosen operating system and compiler.
-- **Memory:** Minimum 512 MB RAM; 1 GB or more recommended for large codebases or extensive test suites.
-- **Storage:** At least 100 MB of free disk space to accommodate the libraries, source files, and test artifacts.
+GoogleTest and GoogleMock require your build environment to support at least **C++17** standard. This is critical for successful compilation and full functionality.
 
-> GoogleTest and GoogleMock have minimal hardware demands but benefit from a modern system for faster builds and test execution.
+- Ensure your compiler is configured to use C++17 or later.
+- Example CMake setting to enforce C++17:
 
-## 2. Operating System Support
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
 
-GoogleTest and GoogleMock support multiple major operating systems, provided later sections’ requirements are met:
-
-- **Linux:** Most popular distributions including Ubuntu, Debian, Fedora, CentOS.
-- **Windows:** Windows 7 and later, including Windows 10 and Windows Server versions.
-- **macOS:** Versions supporting C++17 and the required compilers.
-
-> Refer to the official [compatibility matrix](https://github.com/google/googletest/blob/main/docs/portability.md) for detailed versions and notes.
-
-## 3. Compiler Requirements
-
-### Minimum C++ Standard Version
-- GoogleTest and GoogleMock require **C++17** or later. This is critical as the framework uses modern language features for functionality and performance.
-
-### Supported Compiler Versions
-- **GCC:** Version 7.3 or later
-- **Clang:** Version 6.0 or later
-- **Microsoft Visual C++:** Visual Studio 2017 version 15.7 or later
-
-> For best experience, use the latest stable compiler versions that support C++17 fully. Older compilers may result in build or runtime failures.
-
-## 4. Software Dependencies
-
-- **Build Systems:** The framework integrates smoothly with popular build tools such as Bazel, CMake, and Make. Make sure to have your preferred build system installed and configured.
-- **Standard C++ Library:** A standard-conforming C++ standard library supporting C++17 features.
-- **Optional:**
-  - If you plan to use GoogleMock, include `#include <gmock/gmock.h>` and ensure that GoogleMock is built alongside GoogleTest.
-
-## 5. Network and Access Requirements
-
-- No special network requirements are needed to run GoogleTest or GoogleMock locally.
-- To download or update the framework, ensure access to GitHub or your selected source repository.
-
-## 6. Official Support and Compatibility Policies
-
-GoogleTest and GoogleMock follow foundational support policies:
-
-- Only platforms and compilers officially tested and documented are supported.
-- This ensures stability, performance, and security guarantees.
-- Community contributions may extend compatibility but might not be officially supported.
+> Note: If you don’t use CMake, specify the appropriate `-std=c++17` compiler flag manually.
 
 ---
 
-## Tips and Best Practices
+## 2. Required Build Tools
 
-- **Confirm C++17 Support:** Verify your compiler flags include `-std=c++17` or equivalent.
-- **Consistent Environment:** Use the same compiler and OS versions as your CI/CD build environment to prevent discrepancies.
-- **Update Tooling:** Keep compilers and build systems up to date to benefit from fixes and optimizations.
-- **Consult the Compatibility Matrix:** Google's official compatibility matrix is authoritative for determining supported configurations.
+To build GoogleTest and GoogleMock, your system must have the following tools installed:
 
-## Common Pitfalls
+- **C++ Compiler**
+  - Must support C++17 fully.
+  - Officially supported compilers include:
+    - Microsoft Visual C++ (MSVC)
+    - GCC
+    - Clang
+- **Build System**
+  - GoogleTest provides a community-supported CMake build script.
+  - CMake version **3.13** or newer is required.
+- **Make or Ninja** (or equivalent build tool)
+  - On Unix-like systems, GNU Make or Ninja is commonly used.
+- **Git**
+  - Needed to clone the GoogleTest repository and submodules.
 
-- **Using Older Compiler Versions:** Attempting to build with compilers earlier than required C++17 support will cause compilation failures.
-- **Linking Without GoogleMock:** If you intend to use mock features, omitting GoogleMock from the build can cause linker errors.
-- **Incorrect Compiler Flags:** Missing or conflicting compiler flags related to language standard or ABI compatibility might silently break builds.
+### Optional Dependencies
+
+- If you enable GoogleMock, standard C++ libraries and threading support are necessary.
+- For certain platforms, pthreads may be required.
 
 ---
 
-## Additional Resources
+## 3. Supported Platforms
 
-- [GoogleTest Overview & Architecture](https://github.com/google/googletest/blob/main/docs/overview/architecture-concepts/system-architecture.md)
-- [Integration & Extensions Guide](https://github.com/google/googletest/blob/main/docs/overview/architecture-concepts/integration-and-extensions.md)
-- [GoogleMock Primer](https://github.com/google/googletest/blob/main/docs/gmock_for_dummies.md)
-- [Compatibility and Portability Matrix](https://github.com/google/googletest/blob/main/docs/portability.md)
+GoogleTest and GoogleMock are designed for **cross-platform compatibility** and officially support:
+
+- **Operating Systems:**
+  - Linux
+  - Windows
+  - macOS
+  - UNIX variants
+  - Some embedded platforms (e.g., ESP32, ESP8266)
+
+- **Threading:**
+  - Built to be thread-safe on platforms where `pthreads` is available.
+  - On Windows and other systems lacking pthreads, caution is advised.
+
+> For details on platform-specific nuances and any limitations, consult the [Supported Platforms & Requirements](../overview/adoption-and-integration/supported-platforms-and-requirements) page.
 
 ---
 
-By ensuring you meet these prerequisites and system requirements, you'll be ready to install, configure, and run GoogleTest and GoogleMock effectively on your chosen platform.
+## 4. Environment Setup Checks
+
+Before proceeding, verify the following on your system:
+
+### Compiler Capability
+
+Run your compiler with the following test to confirm C++17 support:
+
+```bash
+# Example for GCC or Clang
+echo "int main() { return 0; }" | g++ -std=c++17 -x c++ - -o /dev/null
+```
+
+If compilation fails, update your compiler or adjust its configuration.
+
+### Build Tools Version
+
+- Check CMake version:
+
+```bash
+cmake --version
+```
+
+Ensure the version is **3.13** or later.
+
+- Verify `make` or `ninja` availability:
+
+```bash
+make --version
+# or
+ninja --version
+```
+
+### Git Setup
+
+Confirm Git is installed and accessible:
+
+```bash
+git --version
+```
+
+---
+
+## 5. Additional Notes
+
+- **Thread Safety:** GoogleTest is thread-safe on platforms with pthread. If your platform lacks pthread, concurrent assertions might not be safe.
+
+- **Visual Studio Runtime Compatibility:**
+  - When building with Visual Studio, be aware of runtime library mismatches between your test project and GoogleTest. You can control this with the `gtest_force_shared_crt` CMake option to use the shared (DLL) runtime.
+
+- **Building GoogleTest as Static or Shared Library:**
+  - By default, GoogleTest builds as a static library.
+  - To build as a shared library, define the macro `-DGTEST_CREATE_SHARED_LIBRARY=1` when compiling.
+  - When linking tests with shared GoogleTest, add `-DGTEST_LINKED_AS_SHARED_LIBRARY=1`.
+
+---
+
+## 6. Quick Prerequisites Checklist
+
+<Check>
+- C++17-compliant compiler is installed and configured.
+- CMake version 3.13 or newer is available.
+- Supported platform (Windows, Linux, macOS, UNIX, or embedded) is selected.
+- Git is installed.
+- Relevant build tools (`make`, `ninja`, or equivalent) are installed.
+- Optional: pthread library available for thread safety on Unix-like systems.
+</Check>
+
+---
+
+## 7. Troubleshooting Common Compatibility Issues
+
+<AccordionGroup title="Common Prerequisite Problems and Fixes">
+<Accordion title="Compiler does not support C++17">
+  Ensure your compiler is up to date. For example, GCC 7 or later and Clang 5 or later fully support C++17.
+
+  See your compiler's documentation on how to specify the C++17 standard flag.
+</Accordion>
+<Accordion title="CMake version too old">
+  Upgrade CMake to at least version 3.13. On many systems, CMake can be updated via package managers or downloaded directly from https://cmake.org/.
+</Accordion>
+<Accordion title="Runtime library mismatch on Windows with Visual Studio">
+  Set the `gtest_force_shared_crt` option ON when building GoogleTest within CMake to align runtime linkage:
+
+  ```bash
+  cmake .. -Dgtest_force_shared_crt=ON
+  ```
+</Accordion>
+<Accordion title="Missing pthread library on Unix-like systems">
+  Install `pthread` development headers and libraries.
+
+  On Debian/Ubuntu:
+  ```bash
+  sudo apt-get install libpthread-stubs0-dev
+  ```
+</Accordion>
+<Accordion title="Git not installed or not in PATH">
+  Install Git from https://git-scm.com/ and ensure it is accessible via command line.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## 8. Related Documentation
+
+- [Supported Platforms & Requirements](../overview/adoption-and-integration/supported-platforms-and-requirements) — Details on OS and compiler support.
+- [Installation Methods](../getting-started/setup-basics/installation-methods) — How to install GoogleTest post environment setup.
+- [Integrating GoogleTest With Other Tools](../overview/adoption-and-integration/integration-with-other-tools) — Enhance your setup with external tools.
+
+---
+
+By ensuring your system meets these requirements and dependencies, you’re prepared to build and run GoogleTest and GoogleMock effectively, unlocking a robust C++ unit testing framework tailored to your platform.
