--- a/getting-started/setup-basics/installation-methods.mdx
+++ b/getting-started/setup-basics/installation-methods.mdx
@@ -1,307 +1,322 @@
 ---
-title: "Installation Methods"
-description: "Step-by-step guidance for installing GoogleTest and GoogleMock using CMake, Bazel, or building directly from source. Includes tips for various operating systems and recommended workflows for common development environments. Helps users choose the method that best fits their build system and project needs."
+title: "Installation (Bazel, CMake, Manual)"
+description: "Provides clear, actionable installation instructions for Bazel, CMake, and manual integration. Walks users through each method step-by-step, enabling them to choose the workflow that best fits their project and platform."
 ---
 
-# Installation Methods for GoogleTest and GoogleMock
+# Installation (Bazel, CMake, Manual)
 
-This guide provides clear, step-by-step instructions to install GoogleTest and GoogleMock using your preferred build system or by building directly from source. Whether you use CMake, Bazel, or manual compilation, this page helps you choose the installation method that best suits your environment and project needs.
-
----
-
-## 1. Prerequisites
-
-Before you start, ensure you have the following:
-
-- **C++17 compatible compiler** (e.g., GCC 7+, Clang 5+, MSVC 2017+).
-- **CMake (version 3.13 or later)** installed for CMake-based builds.
-- **Git** to clone repositories.
-- For Bazel builds, have **Bazel** installed and configured.
-
-
-<Tip>
-If you are on Windows with Visual Studio, confirm Visual Studio has been set up with C++ development workloads and latest Windows SDK.
-</Tip>
+This guide provides clear, actionable installation instructions for GoogleTest and GoogleMock using three installation methods: Bazel, CMake, and Manual integration. Choose the workflow that best fits your project and platform to get started quickly and efficiently.
 
 ---
 
-## 2. Installing with CMake
+## 1. Installing GoogleTest and GoogleMock with Bazel
 
-CMake is the most widely used cross-platform build system and supports both GoogleTest and GoogleMock out of the box.
+Bazel offers a fast, reproducible, and hermetic build and test system popular in many C++ projects. GoogleTest and GoogleMock support Bazel builds out of the box.
 
-### 2.1 Cloning the Repository
+### Steps
 
-Start by cloning the GoogleTest repository, which includes GoogleMock:
+<Steps>
+<Step title="Set up Bazel in your environment">
 
-```bash
-git clone https://github.com/google/googletest.git -b release-1.17.0
-cd googletest
+1. Install Bazel by following the official instructions at [https://bazel.build/install](https://bazel.build/install).
+2. Verify the installation by running:
+
+```sh
+bazel version
 ```
 
-### 2.2 Build as a Standalone Project
+You should see version output with no errors.
 
-1. Create a build directory and navigate into it:
+3. Ensure your workspace contains a `WORKSPACE` file to define external dependencies.
 
-```bash
-mkdir build && cd build
+</Step>
+<Step title="Declare GoogleTest and GoogleMock as dependencies">
+
+1. Add the following to your `WORKSPACE` file to fetch GoogleTest and GoogleMock sources:
+
+```python
+http_archive(
+    name = "com_google_googletest",
+    urls = ["https://github.com/google/googletest/archive/main.zip"],
+    strip_prefix = "googletest-main",
+)
 ```
 
-2. Configure the build using CMake:
+2. This rule downloads the latest GoogleTest/Mock sources.
 
-- To build both GoogleTest and GoogleMock (default):
+</Step>
+<Step title="Use GoogleTest in your Bazel BUILD files">
 
-```bash
+1. In your `BUILD` files, declare your test targets to depend on `@com_google_googletest//:gtest` or `//:gmock` libraries.
+
+Example test rule:
+
+```python
+cc_test(
+    name = "my_test",
+    srcs = ["my_test.cc"],
+    deps = ["@com_google_googletest//:gtest_main"],
+)
+```
+
+2. Run your tests using:
+
+```sh
+bazel test //:my_test
+```
+
+</Step>
+</Steps>
+
+### Tips & Best Practices
+
+- Bazel builds GoogleTest with appropriate compiler flags ensuring thread safety and platform compatibility.
+- Use `gtest_main` if you do not want to write your own `main()` function.
+- If you want mocking features, add GoogleMock dependencies `@com_google_googletest//:gmock` or `:gmock_main`.
+
+---
+
+## 2. Installing GoogleTest and GoogleMock with CMake
+
+CMake supports a wide range of platforms and compilers. You can build GoogleTest either as a standalone project or incorporate it into your existing CMake project.
+
+### Prerequisites
+
+- CMake 3.14 or newer
+- A C++17 compatible compiler (GCC, Clang, MSVC)
+- Make, Ninja, or other generator supported by CMake
+
+
+### Option A: Build GoogleTest as a Standalone Project
+
+Follow these steps:
+
+<Steps>
+<Step title="Clone the repository">
+
+```sh
+git clone https://github.com/google/googletest.git -b main
+dcd googletest
+```
+
+</Step>
+<Step title="Configure the build">
+
+Create a build directory and run `cmake`:
+
+```sh
+mkdir build
+cd build
 cmake ..
 ```
 
-- To build GoogleTest only (skip GoogleMock):
+*To build only GoogleTest and exclude GoogleMock, use:*
 
-```bash
+```sh
 cmake .. -DBUILD_GMOCK=OFF
 ```
 
-3. Compile the project:
+</Step>
+<Step title="Build the project">
 
-```bash
+On Linux/macOS:
+
+```sh
 make
 ```
 
-(or use `nmake`/`msbuild` on Windows)
+On Windows with Visual Studio:
 
-4. (Optional) Install the binaries and headers system-wide:
+Open the generated `gtest.sln` and build.
 
-```bash
+</Step>
+<Step title="Install the libraries (optional)">
+
+To install GoogleTest to your system (default to `/usr/local` on Linux/macOS):
+
+```sh
 sudo make install
 ```
 
-This installs the libraries to `/usr/local/` by default.
+</Step>
+</Steps>
 
-### 2.3 Using GoogleTest in Your CMake Project
+### Option B: Incorporate GoogleTest Into Your Existing CMake Project
 
-For seamless integration, you can add GoogleTest as a subdirectory of your project:
+You can either use the installed libraries or build GoogleTest as part of your project.
+
+### Using Installed Libraries
+
+1. Use `find_package` in your `CMakeLists.txt`:
+
+```cmake
+find_package(GTest CONFIG REQUIRED)
+```
+
+2. Link your test target against `GTest::gtest_main` or `GTest::gtest`:
+
+```cmake
+target_link_libraries(your_test_target PRIVATE GTest::gtest_main)
+```
+
+### Building GoogleTest as Part of Your Project
+
+Add this snippet to your `CMakeLists.txt` to automatically download and build GoogleTest:
 
 ```cmake
 include(FetchContent)
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/release-1.17.0.tar.gz
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
 )
+# For Windows: Prevent runtime conflicts
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(your_test test.cpp)
-target_link_libraries(your_test gtest_main)
-add_test(NAME your_test COMMAND your_test)
+add_executable(your_test_file your_test_file.cpp)
+target_link_libraries(your_test_file gtest_main)
+add_test(NAME your_test COMMAND your_test_file)
 ```
 
-<Tip>
-This method guarantees compiler and linker compatibility between your code and GoogleTest.
-</Tip>
-
-### 2.4 Visual Studio Users
-
-Building with CMake generates `.sln` files you can open directly with Visual Studio. Use the CMake GUI or commands like:
-
-```bash
-cmake .. -G "Visual Studio 16 2019"
-cmake --build . --config Release
-```
-
-### 2.5 Troubleshooting CMake Builds
-
-- If you encounter runtime library conflicts on Windows, set `-Dgtest_force_shared_crt=ON` when running `cmake`.
-- Ensure your compiler supports C++17.
-- For complex projects, prefer adding GoogleTest via CMake FetchContent or as a git submodule.
+This requires CMake 3.14 or later.
 
 ---
 
-## 3. Installing with Bazel
+## 3. Manual Integration Method
 
-If your project uses Bazel as the build system, GoogleTest and GoogleMock can be integrated smoothly.
+Manual integration allows you to download and compile GoogleTest and GoogleMock source code directly as part of your project build system without relying on external package managers or complex build tools.
 
-### 3.1 Add GoogleTest Dependency
+### Prerequisites
 
-In your WORKSPACE file, add:
+- Compatible C++17 compiler
+- Ability to compile static or shared libraries
 
-```bazel
-http_archive(
-    name = "com_google_googletest",
-    urls = ["https://github.com/google/googletest/archive/release-1.17.0.tar.gz"],
-    strip_prefix = "googletest-release-1.17.0",
-)
-```
+### Steps
 
-### 3.2 Reference in BUILD Files
+<Steps>
+<Step title="Download source code">
 
-When defining test targets, link against the gtest and gmock libraries as needed:
+Download the latest release source zip from GitHub:
 
-```bazel
-cc_test(
-    name = "your_test",
-    srcs = ["your_test.cc"],
-    deps = [
-        "@com_google_googletest//googletest",
-        "@com_google_googletest//googlemock",
-    ],
-)
-```
+[https://github.com/google/googletest/releases](https://github.com/google/googletest/releases)
 
-### 3.3 Build and Run
+Extract it into your project directory.
 
-Use Bazel to build and execute your tests:
+</Step>
+<Step title="Add source and headers to your build system">
 
-```bash
-bazel build //path/to:your_test
-bazel test //path/to:your_test
-```
+Include the `googletest/include` and `googlemock/include` directories in your project's include paths.
 
-<Tip>
-Ensure your Bazel version supports C++17 and your environment has compatible toolchains.
-</Tip>
+Add `googletest/src/gtest-all.cc` and `googlemock/src/gmock-all.cc` source files (if using GoogleMock) to your project build.
+
+For example, in a Makefile or similar build tool, add:
+
+- `googletest/include`
+- `googlemock/include`
+- source files: `gtest-all.cc`, `gmock-all.cc`
+
+</Step>
+<Step title="Compile and link">
+
+Compile the source files and link your test binaries against these object files.
+
+Remember to add necessary compiler flags:
+
+- Define `-DGTEST_HAS_PTHREAD=1` if threading is enabled.
+- Add `-pthread` on Linux/macOS when compiling and linking.
+
+</Step>
+</Steps>
+
+### Practical Tips
+
+- If you use GoogleMock, link with `gmock_main.cc` instead of providing your own `main()` function.
+- Define `-DGTEST_CREATE_SHARED_LIBRARY=1` and pass shared library flags if building shared libraries.
+- Use `-DGTEST_LINKED_AS_SHARED_LIBRARY=1` when linking test code with shared GoogleTest libraries.
 
 ---
 
-## 4. Building Directly from Source
+## Verification
 
-For environments or projects without advanced build systems, you can build GoogleTest and GoogleMock manually.
+After installation using any method, build and run a sample test to verify everything is set up correctly.
 
-### 4.1 Clone Repository
+Example `hello_test.cc`:
 
-```bash
-git clone https://github.com/google/googletest.git
-cd googletest
-git checkout release-1.17.0
-```
+```cpp
+#include <gtest/gtest.h>
 
-### 4.2 Compile Source Files
+TEST(HelloTest, BasicAssertions) {
+    EXPECT_EQ(1 + 1, 2);
+}
 
-GoogleTest source is located in `googletest/src/`; GoogleMock is in `googlemock/src/`.
-
-Example for compiling with GCC:
-
-```bash
-g++ -std=c++17 -isystem googletest/include -isystem googlemock/include -pthread \
-    -c googletest/src/gtest-all.cc
-g++ -std=c++17 -isystem googletest/include -isystem googlemock/include -pthread \
-    -c googlemock/src/gmock-all.cc
-```
-
-### 4.3 Link Into a Test Binary
-
-Link your test program with these compiled objects:
-
-```bash
-g++ -std=c++17 your_test.cc gtest-all.o gmock-all.o -pthread -o your_test
-```
-
-<Tip>
-It is critical to compile all code consistently with the same standard (C++17) and compiler flags.
-</Tip>
-
-### 4.4 Sample main() Function
-
-Include one of the provided `main` function implementations from:
-
-- `googletest/src/gtest_main.cc` for GoogleTest
-- `googlemock/src/gmock_main.cc` for GoogleMock (includes GoogleTest support)
-
-Example:
-
-```c++
-#include "gmock/gmock.h"
-
-int main(int argc, char** argv) {
-  testing::InitGoogleMock(&argc, argv);
+int main(int argc, char **argv) {
+  ::testing::InitGoogleTest(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-### 4.5 Benefits and Drawbacks
-
-- **Benefits**: Full control over build commands, minimal dependencies.
-- **Drawbacks**: Tedious and error-prone for larger projects; no automatic dependency management or test discovery.
+Compile and run your test binary. It should execute successfully and report passing tests.
 
 ---
 
-## 5. Recommended Workflows
+## Troubleshooting Common Installation Issues
 
-- **For new projects or modern environments, use CMake**. It offers the easiest setup and best cross-platform support.
-- **For Bazel users, configure WORKSPACE and BUILD files appropriately** to seamlessly integrate GoogleTest and GoogleMock.
-- **Use pre-built `gtest_main` or `gmock_main` libraries** to avoid writing your own `main()` function unless custom initialization is needed.
+<AccordionGroup title="Installation Troubleshooting Tips">
+<Accordion title="Bazel cannot find GoogleTest">
+Make sure your `WORKSPACE` file includes the correct http_archive rule for GoogleTest.
+If you updated your repository URL or tag, verify it is accurate.
 
-
----
-
-## 6. Tips for Various Operating Systems
-
-| OS      | Notes                                                    |
-|---------|----------------------------------------------------------|
-| Linux   | Use the typical `make` workflow after CMake configuration. Ensure `pthread` is available. |
-| macOS   | Supports both CLI with `make` and Xcode build projects created by CMake. |
-| Windows | Use Visual Studio with CMake generator. Pay attention to runtime library settings to avoid linker errors (see section on `gtest_force_shared_crt`). Use Git Bash or PowerShell for command-line steps. |
-
----
-
-## 7. Verification After Installation
-
-Run the included sample tests to verify your installation:
-
-```bash
-cd googletest/build
-ctest
-```
-
-or if building manually:
-
-```bash
-./your_test_binary
-```
-
-You should see output confirming tests passed.
-
-<Tip>
-Use verbose test flags or run individual tests if verification fails to diagnose issues.
-</Tip>
-
----
-
-## 8. Troubleshooting Common Issues
-
-<AccordionGroup title="Common Installation Issues"> 
-<Accordion title="CMake does not find compiler or produces errors">
-- Verify CMake version is 3.13 or newer.
-- Confirm compiler path and environment variables.
-- On Windows, ensure MSVC Build Tools or Visual Studio are installed correctly.
+If unable to fetch dependencies, check your network or proxy settings.
 </Accordion>
-<Accordion title="Runtime library mismatch on Windows">
-- Use `-Dgtest_force_shared_crt=ON` flag in CMake to match your project's runtime linkage.
+<Accordion title="CMake errors during configuration">
+- Confirm your CMake version is 3.14 or higher.
+- Ensure you have a C++17 compatible compiler configured.
+- If building only GoogleTest, pass `-DBUILD_GMOCK=OFF` to exclude GoogleMock.
+- On Windows, set `gtest_force_shared_crt` to ON to avoid runtime conflicts.
 </Accordion>
-<Accordion title="Bazel build fails with missing dependencies">
-- Check your WORKSPACE URLs and versions.
-- Update Bazel to latest stable release.
+<Accordion title="Linker errors related to pthreads">
+On Linux/macOS, add `-pthread` flag to both compile and link commands.
+In CMake, this is handled automatically when using the provided scripts.
+For manual builds, check your compiler documentation for correct pthread flags.
 </Accordion>
-<Accordion title="Tests fail with undefined symbols">
-- Confirm all source files are compiled with -std=c++17 and linked.
-- Ensure `gtest` and `gmock` symbols are correctly linked.
+<Accordion title="Macro name conflicts">
+If you encounter macro name collisions, use `-DGTEST_DONT_DEFINE_TEST=1` or equivalent to rename GoogleTest macros, then use the renamed versions (e.g., `GTEST_TEST`).
 </Accordion>
 </AccordionGroup>
 
 ---
 
-## 9. Additional Resources
+## Next Steps & References
 
-- [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [GoogleTest Primer](primer.md) - Learn how to write your first tests.
-- [GoogleMock Quickstart](guides/getting_started/googlemock-quickstart.md) - For mocking with GoogleMock.
-- [Official CMake Documentation](https://cmake.org/documentation/)
+- After installation, proceed to [Basic Configuration](/getting-started/setup-basics/configuration-overview) for essential setup guidance.
+- Start writing and running tests with our [Write, Build, and Run Your First Test](/getting-started/first-tests-validation/write-build-run-test) tutorial.
+- Troubleshoot any issues via [Troubleshooting Common Setup Issues](/getting-started/first-tests-validation/troubleshooting).
+
+---
+
+## Additional Resources
+
+- Official GitHub Repository: https://github.com/google/googletest
+- Bazel Build Docs: https://docs.bazel.build
+- CMake Documentation: https://cmake.org/documentation/
+- GoogleTest Primer: /docs/primer.md
+- CMake Quickstart Tutorial: /docs/quickstart-cmake.md
+
+---
+
+By following this guide, you'll be able to install and integrate GoogleTest and GoogleMock efficiently, aligning with your project's build system and platform.
 
 
 ---
 
-## Summary
+<Note>
+Remember to verify your build environment meets requirements defined at [Supported Platforms and Requirements](/overview/adoption-and-integration/supported-platforms-and-requirements).
+</Note>
 
-By following this guide, you will successfully install GoogleTest and GoogleMock through your choice of build system, preparing you to integrate robust testing and mocking capabilities into your C++ projects seamlessly.
 
 
 ---
 
-*End of Installation Methods Guide.*
+<Info>
+If you encounter issues or have questions during installation, refer to the [FAQ - How do I set up and run my first tests?](/faq/getting-started-and-core-concepts/setting-up-and-running-tests) section for additional guidance.
+</Info>
